--- a/ppw project/project.css
+++ b/ppw project/project.css
@@ -83,12 +83,12 @@ nav a:hover{
     margin: 0 auto;
     height: 100vh;    
 }
-.intro img {
-    display: block;
-    margin: 0 auto;
-    max-width: 80%;
-    height: auto;
-    position: relative;
+.intro .item{
+    margin: 0 10%;
+    background-image: url(img/image.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 700px;
 }
 .intro::before {
     content: "";
@@ -101,15 +101,27 @@ nav a:hover{
     z-index: -1;
 }
 .intro .text {
-    position: absolute;
-    bottom: 15%;
-    left: 12%;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
     width: auto;
     height: auto;
     color: #fff;
     padding: 0 20px;
+    margin: 20px;
+}
+.intro .text1{
+    width: 500px;
     background: linear-gradient(90deg, rgba(14, 14, 14, 0.50) 32.63%, rgba(14, 14, 14, 0.00) 91.38%);
-    margin: 0 auto;
+}
+.intro .item{
+    display: flex;
+    align-items: flex-end;
+   justify-content: space-between;
+    padding: 0;
+}
+.intro a{
+    padding-left: 550px;
 }
 .intro .text h2 {
     font-family: Irish Grover, sans-serif;
@@ -125,9 +137,6 @@ nav a:hover{
     line-height: 0;
 }
 .intro button {
-    position: absolute;
-    bottom: 0;
-    left: 1050px;
     width: 80px;
     height: 80px;
     color: #0e0e0e;
@@ -1310,6 +1319,10 @@ footer .button input[type="button"]:hover {
     height: auto;
     padding-top: 20px;    
 }
+.discography .music .imag img:hover{
+    transform: scale(1.1);
+    transition: 0.5s;
+}
 .discography .music{
     display: flex;
     justify-content: space-between;
@@ -1384,18 +1397,6 @@ footer .button input[type="button"]:hover {
     z-index: -1;
 }
 .circle11{
-    position: absolute;
-    top: 8200px;
-    left: -150px;
-    width: 641px;
-    height: 641px;
-    flex-shrink: 0;
-    border-radius: 641px;
-    background: #B9413E;
-    opacity: .3;
-    z-index: -1;
-}
-.circle12{
     position: absolute;
     top: 7400px;
     left: 80%;
